1.解耦流式处理 2.添加事件id处理事件上下文